[package]
name = "isflak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
line_drawing = "1.0.0"
rayon = "1.7.0"
glam = "0.24.1"
multimap = "0.9.0"
